--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,12 +4,6 @@
     <title>Dashboard <small>Statistics Overview</small></title>
 </head>
 <!-- Page Heading -->
-<div class="row">
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-</div>
 <!-- /.row -->
 <div class="row">
     <div class="col-lg-4">
@@ -21,17 +15,27 @@
                 <h3 class="panel-title">Login</h3>
             </div>
             <div class="panel-body">
+                <form action="/login" method="post">
+                <div class="form-group">
+                    <% if (typeof message != 'undefined') {
+                    if (message.status !== 200) { %>
+                        <div class="alert alert-danger">
+                        <small name="result"><%=typeof message == 'undefined' ? '' : message.value%></small>
+                        </div>
+                    <% } } %>
+                </div>
                <div class="form-group">
-                                <label>Username</label>
-                                <input class="form-control" placeholder="Username">
+                   <label>Username</label>
+                   <input name="username" class="form-control" placeholder="Username">
                 </div>
                 <div class="form-group">
-                                <label>Password</label>
-                                <input class="form-control" placeholder="Password" type="password">
+                    <label>Password</label>
+                    <input name="password" class="form-control" placeholder="Password" type="password">
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-info">Login</button>
+                    <button class="btn btn-info">Login</button>
                 </div>
+                </form>
             </div>
         </div>
     </div>
