--- a/views/private/applicant.ejs
+++ b/views/private/applicant.ejs
@@ -173,14 +173,26 @@
     </div>
     <!-- APPLICANT INDEX CARD TAB -->
     <div role="tabpanel" class="tab-pane" id="tab-applicant-indexCard">
-        <form id="applicant-indexCard">
+        <div class='col-lg-12'>
+            <div class="row">
                 <div class="col-lg-12">
                     <br/>
-                    <a href="#tab-applicant-view" aria-controls="tab-applicant-view" role="tab" data-toggle="tab"><i class="fa fa-arrow-circle-left"></i> Go back</a><br/><br/>
+                    <a href="#tab-applicant-view" aria-controls="tab-applicant-view" role="tab" data-toggle="tab"><i class="fa fa-arrow-circle-left"></i> Go back</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2>Applicant Index Card</h2><br/><br/>
                     <div id="applicant-indexCard-message" class="form-group">
                     </div>
                 </div>
                 <div class="col-lg-6">
+                    <h2>Transaction Summary</h2><br/><br/>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3">
+                    <form id="applicant-indexCard">
                     <div class="form-group">
                        <label>Reference No.</label>
                        <p name="referenceNo" class="form-control-static"></p>
@@ -202,42 +214,107 @@
                         <p name="passportNo" class="form-control-static"></p>
                     </div>
                     <div class="form-group">
-                        <label>Deployment Date</label>
-                        <input name="dateDeployed" class="form-control" placeholder="Deployment Date"  width="50px;">
-                    </div>
-                    <div class="form-group">
-                        <input name="id" type="hidden" class="form-control">
-                        <input name="updatedBy" type="hidden" value="<%= me.username %>">
-                        <button class="btn btn-success">Deploy!</button>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="form-group">
                         <label>OEC</label>
                         <p name="oec" class="form-control-static"></p>
                     </div>
-                    <div class="form-group">
-                        <label>CG</label>
-                        <p name="cg" class="form-control-static"></p>
-                    </div>
-                    <div class="form-group">
-                        <label>PDOS</label>
-                        <p name="pdos" class="form-control-static"></p>
-                    </div>
-                    <div class="form-group">
-                        <label>Principal (Tie-Up)</label>
-                        <p name="principal" class="form-control-static"></p>
-                    </div>
-                    <div class="form-group">
-                        <label>Employer</label>
-                        <p name="employer" class="form-control-static"></p>
-                    </div>
-                    <div class="form-group">
-                        <label>Country</label>
-                        <p name="country" class="form-control-static"></p>
+                    </form>
+                </div>
+                <div class="col-lg-3">
+                    <form id="applicant-indexCard-col2">
+                        <div class="form-group">
+                            <label>CG</label>
+                            <p name="cg" class="form-control-static"></p>
+                        </div>
+                        <div class="form-group">
+                            <label>PDOS</label>
+                            <p name="pdos" class="form-control-static"></p>
+                        </div>
+                        <div id="cont-principal" class="form-group">
+                        </div>
+                        <div id="cont-employer" class="form-group">
+                            <!-- to be continued: check whether employer has value, if not, display input field for update -->
+                            <!--<label>Employer</label>-->
+                            <!--<p name="employer" class="form-control-static"></p>-->
+                        </div>
+                        <div class="form-group">
+                            <label>Country</label>
+                            <p name="country" class="form-control-static"></p>
+                        </div>
+                        <div id="cont-deployment" class="form-group">
+                            <!--<label>Deployment Date</label>-->
+                            <!--<input name="dateDeployed" class="form-control" placeholder="Deployment Date">-->
+                        </div>
+                        <div class="form-group">
+                            <input name="id" type="hidden" class="form-control">
+                            <input name="updatedBy" type="hidden" value="<%= me.username %>">
+                            <button id="indexCard-btn-update" class="btn btn-success">Update</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-lg-6">
+                    <form id="applicant-transaction-summary">
+                        <div class="form-group">
+                           <label>Total Payment</label>
+                           <p name="total-payment" class="form-control-static"></p>
+                        </div>
+                        <div class="form-group">
+                           <label>Total Expense</label>
+                           <p name="total-expense" class="form-control-static"></p>
+                        </div>
+                        <div class="form-group">
+                           <label>Total Service Fee</label>
+                           <p name="total-servicefee" class="form-control-static"></p>
+                        </div>
+                    </form>
+                </div>
+                
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2>Log Transaction</h2>
+                    <div id="applicant-transaction-message" class="form-group">
                     </div>
                 </div>
-        </form>
+                <div class="col-lg-6"><h2>Transaction Listing</h2></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-4">
+                    <!-- PAYMENT CREATE -->
+                    <form id="applicant-transaction-create">
+                        <div class="form-group">
+                           <input id="applicant-transaction-btn-reset" type="reset" class="btn btn-warning" value="New/Clear">
+                        </div>
+                        <div class="form-group">
+                            <label>Transation <i class="fa fa-check"></i></label>
+                            <select id="ddl-transaction" class="form-control">
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label>Type <i class="fa fa-check"></i></label>
+                            <select id="ddl-transaction-type" name="type" class="form-control">
+                                <option>(Select Type)</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label>Amount <i class="fa fa-check"></i></label>
+                            <input name="amount" class="form-control" placeholder="Amount">
+                        </div>
+                        <div class="form-group" id="cont-transaction-servicefee">
+                        </div>
+                        <div class="form-group">
+                        <input name="owner" type="hidden" class="form-control" value="">
+                        <input name="createdBy" type="hidden" value="<%= me.username %>">
+                        <input name="updatedBy" type="hidden" value="<%= me.username %>">
+                        <button class="btn btn-warning">Save</button>
+                    </div>
+                    </form>
+                </div>
+                <div class="col-lg-2">&nbsp;</div>
+                <div id="cont-applicant-transactions" class="col-lg-6">
+                    
+                </div>
+            </div>
+        </div>
     </div>
     <!-- CREATE APPLICANT TAB -->
     <div role="tabpanel" class="tab-pane" id="tab-applicant-create">
@@ -255,7 +332,7 @@
                     <!--   <input name="referenceNo" class="form-control" placeholder="Reference No.">-->
                     <!--</div>-->
                     <div class="form-group">
-                        <label>Name <i class="fa fa-check"></i></label>
+                        <label>First Name <i class="fa fa-check"></i></label>
                         <input name="firstName" class="form-control" placeholder="First Name">
                     </div>
                     <div class="form-group">
@@ -286,8 +363,10 @@
                     </div>
                     <div class="form-group">
                         <label>Principal (Tie-Up)</label>
-                        <select name="principal" class="form-control">
+                        <select id="applicant-create-ddl-principal" name="principal" class="form-control">
                             <!-- CREATE LOGIC HERE -->
+                            <option id="">(Select Principal)</option>
+                            <option id="">N/A</option>
                             <% for (var i=0; i < ddlTieUp.length; i++) { %>
                                  <option id="<%= ddlTieUp[i].id %>"><%= ddlTieUp[i].name %></option>
                             <% } %>
@@ -366,6 +445,7 @@
                         <label>Principal (Tie-Up)</label>
                         <select name="principal" class="form-control">
                             <!-- CREATE LOGIC HERE -->
+                            <option id="">(Select Principal)</option>
                             <% for (var i=0; i < ddlTieUp.length; i++) { %>
                                  <option id="<%= ddlTieUp[i].id %>"><%= ddlTieUp[i].name %></option>
                             <% } %>
