052516 GUI Update, Added Transaction Date, Removed Service Fee Module

--- a/views/layout-public.ejs
+++ b/views/layout-public.ejs
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="/styles/sb-admin.css">
     <link rel="stylesheet" href="/styles/plugins/morris.css">
     <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/styles/bootstrap-datetimepicker.css">
     <!--STYLES END-->
   </head>
 
@@ -102,7 +103,9 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/jquery.js"></script>
+    <script src="/js/moment.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap-datetimepicker.min.js"></script>
     <script src="/js/plugins/morris/raphael.min.js"></script>
     <script src="/js/plugins/morris/morris.min.js"></script>
     <script src="/js/plugins/morris/morris-data.js"></script>
