--- a/views/private/applicant.ejs
+++ b/views/private/applicant.ejs
@@ -273,21 +273,17 @@
                            <label>Total Expense</label>
                            <p name="total-expense" class="form-control-static"></p>
                         </div>
-                        <div class="form-group">
-                           <label>Total Service Fee</label>
-                           <p name="total-servicefee" class="form-control-static"></p>
-                        </div>
                     </form>
                 </div>
                 
             </div>
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                     <h2>Log Transaction</h2>
                     <div id="applicant-transaction-message" class="form-group">
                     </div>
                 </div>
-                <div class="col-lg-6"><h2>Transaction Listing</h2></div>
+                <div class="col-lg-8"><h2>Transaction Listing</h2></div>
             </div>
             <div class="row">
                 <div class="col-xs-4">
@@ -308,6 +304,18 @@
                             </select>
                         </div>
                         <div class="form-group">
+                            <label>Transaction Date <i class="fa fa-check"></i></label>
+                            <div class='input-group date' id='transaction-date-create'>
+                            <input name='transactionDate' type='text' class="form-control" placeholder="Transaction Date" />
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar">
+                                </span>
+                            </span>
+                            </div>
+                        </div>
+                        <div class="form-group" id="cont-transaction-actualCost">
+                        </div>
+                        <div class="form-group">
                             <label>Amount <i class="fa fa-check"></i></label>
                             <input name="amount" class="form-control" placeholder="Amount">
                         </div>
@@ -322,8 +330,7 @@
                     </div>
                     </form>
                 </div>
-                <div class="col-lg-2">&nbsp;</div>
-                <div id="cont-applicant-transactions" class="col-lg-6">
+                <div id="cont-applicant-transactions" class="col-lg-8">
                     
                 </div>
             </div>
@@ -354,7 +361,13 @@
                     </div>
                     <div class="form-group">
                         <label>Date of Birth <i class="fa fa-check"></i></label>
-                        <input name="dateOfBirth" class="form-control" placeholder="Date of Birth">
+                        <div class='input-group date' id='dateOfBirth-applicant-create'>
+                        <input name='dateOfBirth' type='text' class="form-control" placeholder="Date of Birth" />
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-calendar">
+                            </span>
+                        </span>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label>Passport No. <i class="fa fa-check"></i></label>
@@ -375,7 +388,7 @@
                         <input name="pdos" class="form-control" placeholder="PDOS">
                     </div>
                     <div class="form-group">
-                        <label>Principal (Tie-Up)</label>
+                        <label>Principal (Tie-Up) <i class="fa fa-check"></i></label>
                         <select id="applicant-create-ddl-principal" name="principal" class="form-control">
                             <!-- CREATE LOGIC HERE -->
                             <option id="">(Select Principal)</option>
@@ -434,7 +447,13 @@
                     </div>
                     <div class="form-group">
                         <label>Date of Birth <i class="fa fa-check"></i></label>
-                        <input name="dateOfBirth" class="form-control" placeholder="Date of Birth">
+                        <div class='input-group date' id='dateOfBirth-applicant-update'>
+                        <input name='dateOfBirth' type='text' class="form-control" placeholder="Date of Birth" />
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-calendar">
+                            </span>
+                        </span>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label>Passport No. <i class="fa fa-check"></i></label>
@@ -455,7 +474,7 @@
                         <input name="pdos" class="form-control" placeholder="PDOS">
                     </div>
                     <div class="form-group">
-                        <label>Principal (Tie-Up)</label>
+                        <label>Principal (Tie-Up) <i class="fa fa-check"></i></label>
                         <select name="principal" class="form-control">
                             <!-- CREATE LOGIC HERE -->
                             <option id="">(Select Principal)</option>
@@ -512,15 +531,26 @@
                             </div>
                     </div>
                     <div class="form-group">
-                            <label>Transation <i class="fa fa-check"></i></label>
-                            <select name="transaction" class="form-control">
-                            </select>
+                            <label>Transaction <i class="fa fa-check"></i></label>
+                            <p name="label-transaction"></p>
                     </div>
                     <div class="form-group">
                             <label>Type <i class="fa fa-check"></i></label>
                             <select name="type" name="type" class="form-control">
                                 <option>(Select Type)</option>
                             </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Transaction Date <i class="fa fa-check"></i></label>
+                        <div class='input-group date' id='transaction-date-update'>
+                        <input name='transactionDate' type='text' class="form-control" placeholder="Transaction Date" />
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-calendar">
+                            </span>
+                        </span>
+                        </div>
+                    </div>
+                    <div class="form-group" id="cont-transaction-update-actualCost">
                     </div>
                     <div class="form-group">
                             <label>Amount <i class="fa fa-check"></i></label>
