updated GET commands to data-type:jsonp

--- a/views/private/applicant.ejs
+++ b/views/private/applicant.ejs
@@ -26,97 +26,97 @@
     </div>
 </div>
 <!-- /.row -->
-
-<div class="row">
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class="col-xs-3">
-                        <i class="fa fa-user fa-5x"></i>
-                    </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge"><%=applicants.length%></div>
-                        <div>New Applicants!</div>
-                    </div>
-                </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-green">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class="col-xs-3">
-                        <i class="fa fa-rocket fa-5x"></i>
-                    </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">12</div>
-                        <div>New Deployments!</div>
-                    </div>
-                </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-yellow">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class="col-xs-3">
-                        <i class="fa fa-users fa-5x"></i>
-                    </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">124</div>
-                        <div>All Applicants!</div>
-                    </div>
-                </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-red">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class="col-xs-3">
-                        <i class="fa fa-support fa-5x"></i>
-                    </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">13</div>
-                        <div>Support Tickets!</div>
-                    </div>
-                </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
-</div>
+<!-- stats -->
+<!--<div class="row">-->
+<!--    <div class="col-lg-3 col-md-6">-->
+<!--        <div class="panel panel-primary">-->
+<!--            <div class="panel-heading">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-xs-3">-->
+<!--                        <i class="fa fa-user fa-5x"></i>-->
+<!--                    </div>-->
+<!--                    <div class="col-xs-9 text-right">-->
+<!--                        <div class="huge"><%=applicants.length%></div>-->
+<!--                        <div>New Applicants!</div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <a href="#">-->
+<!--                <div class="panel-footer">-->
+<!--                    <span class="pull-left">View Details</span>-->
+<!--                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>-->
+<!--                    <div class="clearfix"></div>-->
+<!--                </div>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-lg-3 col-md-6">-->
+<!--        <div class="panel panel-green">-->
+<!--            <div class="panel-heading">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-xs-3">-->
+<!--                        <i class="fa fa-rocket fa-5x"></i>-->
+<!--                    </div>-->
+<!--                    <div class="col-xs-9 text-right">-->
+<!--                        <div class="huge">12</div>-->
+<!--                        <div>New Deployments!</div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <a href="#">-->
+<!--                <div class="panel-footer">-->
+<!--                    <span class="pull-left">View Details</span>-->
+<!--                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>-->
+<!--                    <div class="clearfix"></div>-->
+<!--                </div>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-lg-3 col-md-6">-->
+<!--        <div class="panel panel-yellow">-->
+<!--            <div class="panel-heading">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-xs-3">-->
+<!--                        <i class="fa fa-users fa-5x"></i>-->
+<!--                    </div>-->
+<!--                    <div class="col-xs-9 text-right">-->
+<!--                        <div class="huge">124</div>-->
+<!--                        <div>All Applicants!</div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <a href="#">-->
+<!--                <div class="panel-footer">-->
+<!--                    <span class="pull-left">View Details</span>-->
+<!--                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>-->
+<!--                    <div class="clearfix"></div>-->
+<!--                </div>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-lg-3 col-md-6">-->
+<!--        <div class="panel panel-red">-->
+<!--            <div class="panel-heading">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-xs-3">-->
+<!--                        <i class="fa fa-support fa-5x"></i>-->
+<!--                    </div>-->
+<!--                    <div class="col-xs-9 text-right">-->
+<!--                        <div class="huge">13</div>-->
+<!--                        <div>Support Tickets!</div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <a href="#">-->
+<!--                <div class="panel-footer">-->
+<!--                    <span class="pull-left">View Details</span>-->
+<!--                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>-->
+<!--                    <div class="clearfix"></div>-->
+<!--                </div>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 <!-- /.row -->
 
 <div class="row">
@@ -142,7 +142,12 @@
                             <table id="table-applicant-results" class="table table-bordered table-hover table-striped" cellspacing="0" width="100%">
                                 <thead>
                                     <tr>
-                                        <th><!--ACTION--></th>
+                                        <th>
+                                            <% if (me.role === "su" | me.role === "admin") { %>
+                                            Edit&nbsp;|
+                                            <% } %>
+                                            View
+                                        </th>
                                         <th>Reference No.</th>
                                         <th>First Name</th>
                                         <th>Last Name</th>
@@ -224,19 +229,19 @@
                         <label>Passport No.</label>
                         <p name="passportNo" class="form-control-static"></p>
                     </div>
-                    <div class="form-group">
-                        <label>OEC</label>
-                        <p name="oec" class="form-control-static"></p>
-                    </div>
                     </form>
                 </div>
                 <div class="col-lg-3">
                     <form id="applicant-indexCard-col2">
-                        <div class="form-group">
+                        <div id="cont-oec" class="form-group">
+                            <label>OEC</label>
+                            <p name="oec" class="form-control-static"></p>
+                        </div>
+                        <div id="cont-cg" class="form-group">
                             <label>CG</label>
                             <p name="cg" class="form-control-static"></p>
                         </div>
-                        <div class="form-group">
+                        <div id="cont-pdos" class="form-group">
                             <label>PDOS</label>
                             <p name="pdos" class="form-control-static"></p>
                         </div>
@@ -273,6 +278,10 @@
                            <label>Total Expense</label>
                            <p name="total-expense" class="form-control-static"></p>
                         </div>
+                        <div class="form-group">
+                           <label>Total Difference</label>
+                           <p name="total-difference" class="form-control-static"></p>
+                        </div>
                     </form>
                 </div>
                 
@@ -283,7 +292,7 @@
                     <div id="applicant-transaction-message" class="form-group">
                     </div>
                 </div>
-                <div class="col-lg-8"><h2>Transaction Listing</h2></div>
+                <div class="col-lg-4" id="tab-applicant-indexCard-txListing"><h2>Transaction Listing</h2><a href="report/ledger?id=" target="_blank">Detailed View</a><br/><br/></div>
             </div>
             <div class="row">
                 <div class="col-xs-4">
@@ -303,6 +312,8 @@
                                 <option>(Select Type)</option>
                             </select>
                         </div>
+                        <div id="cont-transaction-center" class="form-group">
+                        </div>
                         <div class="form-group">
                             <label>Transaction Date <i class="fa fa-check"></i></label>
                             <div class='input-group date' id='transaction-date-create'>
@@ -313,8 +324,8 @@
                             </span>
                             </div>
                         </div>
-                        <div class="form-group" id="cont-transaction-actualCost">
-                        </div>
+                        <!--<div class="form-group" id="cont-transaction-actualCost">-->
+                        <!--</div>-->
                         <div class="form-group">
                             <label>Amount <i class="fa fa-check"></i></label>
                             <input name="amount" class="form-control" placeholder="Amount">
@@ -331,7 +342,6 @@
                     </form>
                 </div>
                 <div id="cont-applicant-transactions" class="col-lg-8">
-                    
                 </div>
             </div>
         </div>
@@ -376,15 +386,15 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="form-group">
-                        <label>OEC <i class="fa fa-check"></i></label>
+                        <label>OEC</label>
                         <input name="oec" class="form-control" placeholder="OEC">
                     </div>
                     <div class="form-group">
-                        <label>CG <i class="fa fa-check"></i></label>
+                        <label>CG</label>
                         <input name="cg" class="form-control" placeholder="CG">
                     </div>
                     <div class="form-group">
-                        <label>PDOS <i class="fa fa-check"></i></label>
+                        <label>PDOS</label>
                         <input name="pdos" class="form-control" placeholder="PDOS">
                     </div>
                     <div class="form-group">
@@ -406,10 +416,9 @@
                         <label>Country</label>
                         <select name="country" class="form-control">
                             <!-- CREATE LOGIC HERE -->
-                                        <option>Hong Kong</option>
-                                        <option>Oman</option>
-                                        <option>Qatar</option>
-                                        <option>Kuwait</option>
+                            <% for (var i=0; i < ddlCountry.length; i++) { %>
+                                 <option><%= ddlCountry[i].name %></option>
+                            <% } %>
                         </select>
                     </div>
                 </div>
@@ -478,6 +487,7 @@
                         <select name="principal" class="form-control">
                             <!-- CREATE LOGIC HERE -->
                             <option id="">(Select Principal)</option>
+                            <option id="">N/A</option>
                             <% for (var i=0; i < ddlTieUp.length; i++) { %>
                                  <option id="<%= ddlTieUp[i].id %>"><%= ddlTieUp[i].name %></option>
                             <% } %>
@@ -491,10 +501,9 @@
                         <label>Country</label>
                         <select name="country" class="form-control">
                             <!-- CREATE LOGIC HERE -->
-                                        <option>Hong Kong</option>
-                                        <option>Oman</option>
-                                        <option>Qatar</option>
-                                        <option>Kuwait</option>
+                            <% for (var i=0; i < ddlCountry.length; i++) { %>
+                                 <option><%= ddlCountry[i].name %></option>
+                            <% } %>
                         </select>
                     </div>
                 </div>
