--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -42,7 +42,7 @@
                     <ul class="dropdown-menu">
                         <li class="divider"></li>
                         <li>
-                            <a href="/user/logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="/logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                         </li>
                     </ul>
                 </li>
@@ -58,10 +58,13 @@
                         <a href="javascript:;" data-toggle="collapse" data-target="#report" class="collapsed" aria-expanded="false"><i class="fa fa-fw fa-arrows-v"></i> Reports <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="report" class="collapse" aria-expanded="false" style="height: 0px;">
                             <li>
+                                <a href="#" href='#' data-toggle='modal' data-target='#report-expense'>Expenses</a>
+                            </li>
+                            <li>
                                 <a href="#" href='#' data-toggle='modal' data-target='#report-collection'>Collections</a>
                             </li>
                             <li>
-                                <a href="#">Billing</a>
+                                <a href="#" href='#' data-toggle='modal' data-target='#report-deployment'>Deployments</a>
                             </li>
                         </ul>
                     </li>
@@ -87,6 +90,74 @@
 
     </div>
     <!-- /#wrapper -->
+    <div class="modal fade" id="report-expense" tabindex="-1" role="dialog" data-backdrop="static" aria-labelledby="label-report-expense">
+      <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="label-report-expense">Expenses Report</h4>
+          </div>
+          <div class="modal-body">
+                <form id="form-report-expense" action="report/expense" target="_blank">
+                    <div class="form-group">
+                        <div id="report-expense-message" class="form-group">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Start Date</label>
+                        <div class='input-group date' id='report-expense-start'>
+                            <input name='start' type='text' class="form-control" />
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar">
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>End Date</label>
+                        <div class='input-group date' id='report-expense-end'>
+                                <input name='end' type='text' class="form-control" />
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar">
+                                    </span>
+                                </span>
+                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Principal (Tie-Up)</label>
+                        <select id="report-expense-ddl-principal" name="principal" class="form-control">
+                            <!-- CREATE LOGIC HERE -->
+                            <option id="">ALL</option>
+                            <% for (var i=0; i < ddlTieUp.length; i++) { %>
+                                 <option id="<%= ddlTieUp[i].id %>"><%= ddlTieUp[i].name %></option>
+                            <% } %>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Transaction Type</label>
+                        <select id="report-expense-ddl-type" name="type" class="form-control">
+                            <!-- CREATE LOGIC HERE -->
+                            <option id="">ALL</option>
+                            <% for (var i=0; i < ddlType.length; i++) { 
+                                if (ddlType[i].module === 2) {
+                                %>
+                                 <option><%= ddlType[i].description %></option>
+                            <% }
+                            } %>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                            <button name="close" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button class="btn btn-primary">Run Report</button>
+                        </div>
+                </form>
+          </div>
+          <div class="modal-footer">
+          </div>
+        </div>
+      </div>
+    </div>
+    
     <div class="modal fade" id="report-collection" tabindex="-1" role="dialog" data-backdrop="static" aria-labelledby="label-report-collection">
       <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
@@ -97,7 +168,7 @@
           <div class="modal-body">
                 <form id="form-report-collection" action="report/collection" target="_blank">
                     <div class="form-group">
-                        <div id="applicant-transaction-update-message" class="form-group">
+                        <div id="report-collection-message" class="form-group">
                         </div>
                     </div>
                     <div class="form-group">
@@ -121,6 +192,19 @@
                             </div>
                     </div>
                     <div class="form-group">
+                        <label>Transaction Type</label>
+                        <select id="report-collection-ddl-type" name="type" class="form-control">
+                            <!-- CREATE LOGIC HERE -->
+                            <option id="">ALL</option>
+                            <% for (var i=0; i < ddlType.length; i++) { 
+                                if (ddlType[i].module === 1) {
+                                %>
+                                 <option><%= ddlType[i].description %></option>
+                            <% }
+                            } %>
+                        </select>
+                    </div>
+                    <div class="form-group">
                             <button name="close" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                             <button class="btn btn-primary">Run Report</button>
                         </div>
@@ -132,6 +216,73 @@
       </div>
     </div>
 
+    <div class="modal fade" id="report-deployment" tabindex="-1" role="dialog" data-backdrop="static" aria-labelledby="label-report-deployment">
+      <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="label-report-payment">Deployments Report</h4>
+          </div>
+          <div class="modal-body">
+                <form id="form-report-deployment" action="report/deployment" target="_blank">
+                    <div class="form-group">
+                        <div id="report-deployment-message" class="form-group">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Start Date</label>
+                        <div class='input-group date' id='report-deployment-start'>
+                            <input name='start' type='text' class="form-control" />
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar">
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>End Date</label>
+                        <div class='input-group date' id='report-deployment-end'>
+                                <input name='end' type='text' class="form-control" />
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar">
+                                    </span>
+                                </span>
+                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Country</label>
+                        <select name="country" class="form-control">
+                            <!-- CREATE LOGIC HERE -->
+                            <option>ALL</option>
+                            <option>Hong Kong</option>
+                            <option>Oman</option>
+                            <option>Qatar</option>
+                            <option>Kuwait</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Principal</label>
+                        <select id="report-deployment-ddl-principal" name="principal" class="form-control">
+                            <!-- CREATE LOGIC HERE -->
+                            <option id="">ALL</option>
+                            <% for (var i=0; i < ddlTieUp.length; i++) { 
+                                %>
+                                 <option><%= ddlTieUp[i].name %></option>
+                            <% } %>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                            <button name="close" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button class="btn btn-primary">Run Report</button>
+                        </div>
+                </form>
+          </div>
+          <div class="modal-footer">
+          </div>
+        </div>
+      </div>
+    </div>
+    
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/jquery.js"></script>
