--- a/views/private/admin.ejs
+++ b/views/private/admin.ejs
@@ -130,7 +130,7 @@
                             <table id="table-user-results" class="table table-bordered table-hover table-striped" cellspacing="0" width="100%">
                                 <thead>
                                     <tr>
-                                        <th><!--ACTION--></th>
+                                        <th>Edit | View</th>
                                         <th>Username</th>
                                         <th>First Name</th>
                                         <th>Last Name</th>
