--- a/views/private/expense.ejs
+++ b/views/private/expense.ejs
@@ -1,6 +1,6 @@
-<div id="export-report-payment" class="row">
+<div id="export-report-collection" class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Collection Report</h1>
+        <h1 class="page-header">Expenses Report</h1>
         <ol class="breadcrumb">
             <li class="active">
                 Period from <%=headers.start%> to <%=headers.end%>
@@ -9,14 +9,17 @@
     </div>
     <div class='col-lg-12'>
         <div class="table-responsive">
-            <table style="font-size: 80%;" id="table-report-payment" class="table table-bordered table-hover table-striped" cellspacing="0" width="100%">
+            <table style="font-size: 80%;" id="table-report-collection" class="table table-bordered table-hover table-striped" cellspacing="0" width="100%">
                 <thead>
                     <tr>    
                         <th>Transaction Date</th>
                         <th>Reference No.</th>
                         <th>Name</th>
                         <th>Type</th>
+                        <!--<th>Actual Cost</th>-->
                         <th>Amount</th>
+                        <th>Principal</th>
+                        <th>Employer</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -28,7 +31,10 @@
                               <td><%= report[i].referenceNo %></td>
                               <td><%= report[i].name %></td>
                               <td><%= report[i].type %></td>
+                              <!--<td><%= report[i].actualCost %></td>-->
                               <td><%= report[i].amount %></td>
+                              <td><%= report[i].principal %></td>
+                              <td><%= report[i].employer %></td>
                             </tr>
                         <% }
                         }
@@ -40,7 +46,7 @@
 </div>
 <div class="row">
     <div class="col-lg-4">
-        <button id="button-export-payment" class="btn btn-success">Download</button>
+        <button id="button-export-collection" class="btn btn-success">Download</button>
         <button onClick="window.print()" class="btn btn-info">Print</button>
     </div>    
 </div>
